--- a/abbreviations.tex
+++ b/abbreviations.tex
@@ -126,10 +126,15 @@
 \newcommand{\sel}{\text{sel}\xspace}
 \newcommand{\cmc}{\ensuremath{\mbox{$C_\text{MC}$}}\xspace}
 
+\newcommand{\imass}{\ensuremath{i}\xspace}
+\newcommand{\nmass}{\ensuremath{I}\xspace}
+
 \newcommand{\impact}{\ensuremath{\mbox{$b_r$}}\xspace}
 \newcommand{\impactmax}{\ensuremath{\mbox{$b_r^\text{max}$}}\xspace}
 \newcommand{\decaydist}{\ensuremath{\mbox{$L_\text{decay}$}}\xspace}
 \newcommand{\decaydistmin}{\ensuremath{\mbox{$L_\text{decay}^\text{min}$}}\xspace}
+
+
 
 
 
