--- a/lib.bib
+++ b/lib.bib
@@ -2,6 +2,44 @@
 %%%%%%%% PAPERS %%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%
 
+@article{Aduszkiewicz:2015dmr,
+      author         = "Aduszkiewicz, A. and others",
+      title          = "{Production of $\Lambda $ -hyperons in inelastic p+p
+                        interactions at 158 ${\mathrm{GeV}}\!/\!c$}",
+      collaboration  = "NA61/SHINE",
+      journal        = "Eur. Phys. J.",
+      volume         = "C76",
+      year           = "2016",
+      number         = "4",
+      pages          = "198",
+      doi            = "10.1140/epjc/s10052-016-4003-2",
+      eprint         = "1510.03720",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CERN-PH-EP-2015-274",
+      SLACcitation   = "%%CITATION = ARXIV:1510.03720;%%"
+}
+
+@article{Abgrall:2015hmv,
+      author         = "Abgrall, N. and others",
+      title          = "{Measurements of $\pi ^{\pm }$ , $K^{\pm }$ , $K^0_S$ ,
+                        $\varLambda $ and proton production in proton–carbon
+                        interactions at 31 GeV/c with the NA61/SHINE spectrometer
+                        at the CERN SPS}",
+      collaboration  = "NA61/SHINE",
+      journal        = "Eur. Phys. J.",
+      volume         = "C76",
+      year           = "2016",
+      number         = "2",
+      pages          = "84",
+      doi            = "10.1140/epjc/s10052-016-3898-y",
+      eprint         = "1510.02703",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CERN-PH-EP-2015-278",
+      SLACcitation   = "%%CITATION = ARXIV:1510.02703;%%"
+}
+
 @article{Chatrchyan:2008aa,
       author         = "Chatrchyan, S. and others",
       title          = "{The CMS Experiment at the CERN LHC}",
@@ -596,7 +634,7 @@
   author       = "Veres, G. I.", 
   title        = "{Baryon Momentum Transfer in Hadronicand Nucear Collisions
 at the CERN NA49 Experiment}",
-  school       = "Department of Atomic Physics, Eotvos Lorand University",
+  school       = "Department of Atomic Physics, E$\ddot{\text{o}}$tv$\ddot{\text{o}}$s Lor\'{a}nd University",
   year         = "2001"
   address      = "Budapest"
 }
@@ -610,7 +648,7 @@ in the NA61/SHINE experiment at CERN SPS}",
   address      = "Krak\'ow"
 }
 
-@phdthesis{MartinThesis,
+@mastersthesis{MartinThesis,
   author       = "Ruprecht, M.", 
   title        = "{Measurements of the Spectrum of Charged Hadrons in $\pi^-$+C Interactions with the \NASixtyOne Experiment}",
   school       = "Institute of Experimental Particle Physics, Karlsruhe Institute of Technology",
@@ -622,10 +660,29 @@ in the NA61/SHINE experiment at CERN SPS}",
   author       = "van~Leeuwen, M.", 
   title        = "{Kaon and open charm production in central lead-lead
 collisions at the CERN SPS}",
-  school       = "NIKHEF",
+  school       = "National Institute for Subatomic Physics (NIKHEF)",
   year         = "2003"
   address      = "Amsterdam"
 }
+
+@mastersthesis{TobiaszThesis,
+  author       = "Czopowicz, T.", 
+  title        = "{Study of K$_0^S$ meson production in NA61
+experiment at the CERN SPS}",
+  school       = "Warsaw University of Technology, Faculty of Physics",
+  year         = "2010"
+  address      = "Warsaw"
+}
+
+@phdthesis{BarnaThesis,
+  author       = "Barna, D.", 
+  title        = "{Strange Particle Production in
+Proton-Proton Collisions at 158 GeV}",
+  school       = "Doctoral School of Physics, E$\ddot{\text{o}}$tv$\ddot{\text{o}}$s Lor\'{a}nd University",
+  year         = "2002"
+  address      = "Budapest"
+}
+
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%
