--- a/interpetration.tex
+++ b/interpetration.tex
@@ -1,6 +1,6 @@
 \chapter[Interpretation of measurements of the number of muons in extensive air shower experiments]{Interpretation of measurements of the number of muons in extensive air shower experiments}
 \label{sec:interpretation}
 
-\includepdf[pages=-]{paper_interpretation.pdf}
+\includepdf[pages=-, pagecommand={}]{paper_interpretation.pdf}
 
 
